# rich-input-handlr

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
rich_input_handlr/: __init__.py  core.py  words.py
tests/: test_core.py
